Footer issue fixed
Footer issue (white space on left) fixed

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -33,10 +33,7 @@ body {
 	margin-top: 60px;
 }
 
-.navbar-fixed-bottom
-{
-  width: 100%;
-}
+
 
 .footer
 {
@@ -46,7 +43,6 @@ body {
   height: 20px;
   background-color: #d0cfcd;
   text-align: center;
-  margin-left: -52px;
 }
 
 .article-show
